# ComfyUI-SimpleChat

./: .gitignore  README.md  README_CN.md  __init__.py  pyproject.toml
.github/workflows/: publish-wiki.yml  publish.yml
api/: __init__.py  routes.py
assets/: AnimaPromptScheme.json  ArtistBatchTest_Grid.json  ArtistBlendXYPlot_Test.json  ArtistXYPlot_Test.json  SimpleChatExample.json
core/: __init__.py  image_utils.py  noass.py  template.py
core/providers/: __init__.py  base.py  claude.py  gemini.py  openai.py
docs/: anima_prompt.md  anima_prompt_parts.md  anima_scheme.md  architecture.md  research_comfyui_api_patterns.md  research_gemini_image.md  research_noass.md
docs/wiki/: Anima.md  Home.md  Nodes.md  Wiki-Sync.md
nodes/: __init__.py  anima_prompt_router.py  anima_prompt_xy_matrix.py  chat.py  chat_image.py  chat_noass.py  config.py  gemini_edit.py  gemini_gen.py  image_grid.py  image_xy_plot.py  json_parse.py  json_parse_16.py  json_to_vars.py  markdown_preview.py  mustache_render.py  mustache_var.py  prompt_json_unpack.py  text_input.py  text_list.py  xy_cell_prefix.py
web/: markdown_preview.js  simple_chat_config.js
